New branch feature commit

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 
 body {
 	background: #1d0404;
-	font-family: Roboto, sans-serif;
+	font-family: Roboto, cursive;
 	color: rgb(50, 8, 8);
 	height: 100%;
 	width: 100%;
@@ -14,7 +14,7 @@ main {
 	background: rgb(242, 235, 235);
 	border-radius: 20px 20px 0 0;
 	box-shadow: 10px 10px 20px #f6c5c5;
-	border: 1px solid #d5d5d5;
+	border: 2px solid #d5d5d5;
 	color: rgb(36, 10, 10);
 }
 
@@ -22,7 +22,7 @@ main > h1 {
 	font-weight: bold;
 	padding: 1.5rem;
 	margin: 0;
-	border-bottom: 1px solid #d5d5d5;
+	border-bottom: 2px solid #d5d5d5;
 	display: flex;
 	justify-content: space-between;
 }
@@ -62,7 +62,7 @@ ul {
 
 ul > li {
 	padding: 1.5rem;
-	border-bottom: 1px solid #d5d5d5;
+	border-bottom: 1px solid #4a0f0f;
 	display: flex;
 	justify-content: space-between;
 }
